# SearchByHash

./: .gitignore  CMakeLists.txt  SearchByHash.cpp  SearchByHash.h  concurrency.hpp  disk_hash_index.hpp  handle_guard.hpp  hash_wrapper.hpp  synchronized.hpp  thread_pool.hpp  utils.h  winapi_typedefs.h
